[project]
name = "loqusdb"

description = "A simple observation count database"
authors = [{name="Mans Magnuson", email="monsunas@gmail.com"}, {name="Adam Rosenbaum", email="adam.rosenbaum@regionvasterbotten.se"}, {name="Daniel Nilsson", email="daniel.nilsson@ki.se"}, {name="Chiara Rasi", email="chiara.rasi@scilifelab.se"}, {name="Jesper Eisfeldt", email="jesper.eisfeldt@scilifelab.se"}, {name="Henrik Stranneheim"},]
maintainers = [ {name="Clinical Genomics Bioinformatics Team"}, {name="Clinical Genomics System Development Team"}, {name="Clinical Genomics Scout Team"}]
license = "MIT"
readme = "README.md"
version = "2.7.22"

[tool.poetry]
include = [
  "README.md",
  "loqusdb/**/*",
  "tests/**/*"
]

[tool.poetry.dependencies]
python = "^3.12"
cyvcf2 = "*"
click = "*"
pymongo = "*"
numpy = "*"
coloredlogs = "*"
PyYAML = "*"
vcftoolbox = "*"
setuptools = "*"
mongo-adapter = "*"
ped_parser = "*"

[tool.poetry.group.dev.dependencies]
coveralls =  "^3"
mongomock = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"

[tool.poetry.scripts]
loqusdb = "loqusdb.commands.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"
ignore = ["E501"]
